removed green dumb lines

--- a/ancestral-cookbook/style.css
+++ b/ancestral-cookbook/style.css
@@ -209,7 +209,7 @@ img {
     width: 60px;
     height: 60px;
     border: 2px solid #ccc;
-    border-bottom-color: #1c8314;
+    border-bottom-color: #9C926D;
     border-radius: 50%;
     position: absolute;
     top: 0;
@@ -269,7 +269,7 @@ img {
   padding-right: 0;
   width: 30px;
   height: 30px;
-  background-color: #40ba37;
+  background-color: #9C926D;
   line-height: 30px;
   text-align: center;
   position: absolute;
@@ -407,7 +407,7 @@ textarea:focus {
   z-index: 200;
   top: -80px;
   left: 0;
-  background-color: #40ba37;
+  background-color: #9C926D;
   -webkit-transition-duration: 700ms;
   transition-duration: 700ms; }
   .search-wrapper form {
@@ -487,7 +487,7 @@ textarea:focus {
               color: #b6b6b6;
               font-style: italic; }
               .header-area .top-header-area .breaking-news .ticker ul li a:hover, .header-area .top-header-area .breaking-news .ticker ul li a:focus {
-                color: #40ba37; }
+                color: #9C926D; }
     .header-area .top-header-area .top-social-info a {
       display: inline-block;
       color: #b6b6b6;
@@ -496,7 +496,7 @@ textarea:focus {
       .header-area .top-header-area .top-social-info a:last-child {
         margin-right: 0; }
       .header-area .top-header-area .top-social-info a:hover, .header-area .top-header-area .top-social-info a:focus, .header-area .top-header-area .top-social-info a.active {
-        color: #40ba37; }
+        color: #9C926D; }
   .header-area .delicious-main-menu {
     position: relative;
     width: 100%;
@@ -529,13 +529,13 @@ textarea:focus {
           font-size: 14px;
           color: #ffffff;
           background-color: #615B42;
-          border-bottom: 3px solid #1c8314; }
+          border-bottom: 3px solid #9C926D; }
           .header-area .delicious-main-menu .classy-navbar .classynav > ul > li > a:hover::after, .header-area .delicious-main-menu .classy-navbar .classynav > ul > li > a:focus::after {
             color: #ffffff; }
       .header-area .delicious-main-menu .classy-navbar .classynav > ul > li.active > a {
         color: #ffffff;
         background-color: #615B42;
-        border-bottom: 3px solid #1c8314; }
+        border-bottom: 3px solid #9C926D; }
         .header-area .delicious-main-menu .classy-navbar .classynav > ul > li.active > a::after {
           color: #ffffff; }
     .header-area .delicious-main-menu .classynav .search-btn {
@@ -624,7 +624,7 @@ textarea:focus {
       position: relative;
       z-index: 1;
       padding: 60px 50px;
-      border-left: 3px solid #40ba37;
+      border-left: 3px solid #9C926D;
       background-color: rgba(24, 24, 24, 0.54); }
       @media only screen and (max-width: 767px) {
         .hero-slides .single-hero-slide .hero-slides-content {
@@ -660,7 +660,7 @@ textarea:focus {
     visibility: hidden;
     -webkit-transition-duration: 500ms;
     transition-duration: 500ms;
-    border-bottom: 3px solid #1c8314; }
+    border-bottom: 3px solid #9C926D; }
     @media only screen and (max-width: 767px) {
       .hero-slides .owl-prev,
       .hero-slides .owl-next {
@@ -686,7 +686,7 @@ textarea:focus {
       color: #ffffff;
       margin-right: 10px; }
       .hero-slides .owl-dots .owl-dot.active {
-        color: #1c8314; }
+        color: #9C926D; }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .breakpoint-on .classynav ul li.cn-dropdown-item > a::after,
@@ -754,7 +754,7 @@ textarea:focus {
   position: relative;
   z-index: 1; }
   .single-best-receipe-area img {
-    border-bottom: 3px solid #40ba37; }
+    border-bottom: 3px solid #9C926D; }
   .single-best-receipe-area .receipe-content {
     padding-top: 30px;
     text-align: center; }
@@ -765,7 +765,7 @@ textarea:focus {
       -webkit-transition-duration: 500ms;
       transition-duration: 500ms; }
       .single-best-receipe-area .receipe-content h5:hover, .single-best-receipe-area .receipe-content h5:focus {
-        color: #40ba37; }
+        color: #9C926D; }
     .single-best-receipe-area .receipe-content .ratings i {
       font-size: 11px;
       color: #fbb710;
@@ -834,7 +834,7 @@ textarea:focus {
         .single-small-receipe-area .receipe-content a h5 {
           font-size: 16px; } }
       .single-small-receipe-area .receipe-content a h5:hover, .single-small-receipe-area .receipe-content a h5:focus {
-        color: #40ba37; }
+        color: #9C926D; }
   .single-small-receipe-area .receipe-content .ratings i {
     font-size: 11px;
     color: #fbb710;
@@ -849,7 +849,7 @@ textarea:focus {
 .quote-area {
   position: relative;
   z-index: 1;
-  border: 10px solid #40ba37;
+  border: 10px solid #9C926D;
   padding: 40px 25px;
   margin-bottom: 80px; }
   .quote-area span {
@@ -874,7 +874,7 @@ textarea:focus {
     margin-bottom: 50px; }
   .quote-area .date-comments .date {
     font-size: 12px;
-    color: #40ba37; }
+    color: #9C926D; }
   .quote-area .date-comments .comments {
     font-size: 12px;
     color: #9b9b9b; }
@@ -903,7 +903,7 @@ textarea:focus {
     color: #9b9b9b;
     font-size: 12px;
     font-style: italic;
-    border-left: 3px solid #1c8314;
+    border-left: 3px solid #9C926D;
     padding: 0 20px;
     margin-bottom: 25px; }
   .newsletter-form p {
@@ -938,7 +938,7 @@ textarea:focus {
     .single-blog-area .blog-thumbnail .post-date {
       width: 75px;
       height: 100px;
-      background-color: #40ba37;
+      background-color: #9C926D;
       position: absolute;
       top: 20px;
       left: 20px;
@@ -962,7 +962,7 @@ textarea:focus {
           font-weight: 700;
           display: block; }
       .single-blog-area .blog-thumbnail .post-date:hover, .single-blog-area .blog-thumbnail .post-date:focus {
-        background-color: #1c8314; }
+        background-color: #9C926D; }
   .single-blog-area .blog-content {
     position: relative;
     z-index: 1;
@@ -972,7 +972,7 @@ textarea:focus {
       color: #474747;
       margin-bottom: 10px; }
       .single-blog-area .blog-content .post-title:hover, .single-blog-area .blog-content .post-title:focus {
-        color: #40ba37; }
+        color: #9C926D; }
     .single-blog-area .blog-content .meta-data {
       font-size: 12px;
       color: #a4a4a4;
@@ -982,7 +982,7 @@ textarea:focus {
         font-size: 12px;
         color: #a4a4a4; }
         .single-blog-area .blog-content .meta-data a:hover, .single-blog-area .blog-content .meta-data a:focus {
-          color: #40ba37; }
+          color: #9C926D; }
 
 .single-widget {
   position: relative;
@@ -997,7 +997,7 @@ textarea:focus {
       padding: 5px 0;
       color: #797979; }
       .single-widget .list li a:hover, .single-widget .list li a:focus {
-        color: #40ba37; }
+        color: #9C926D; }
 
 .pagination {
   position: relative;
@@ -1010,10 +1010,10 @@ textarea:focus {
     color: #474747; }
     .pagination .page-link:hover, .pagination .page-link:focus {
       background-color: transparent;
-      color: #40ba37; }
+      color: #9C926D; }
   .pagination .page-item.active .page-link {
     background-color: transparent;
-    color: #40ba37; }
+    color: #9C926D; }
 
 /* :: 15.0 Receipe Area */
 .receipe-post-search {
@@ -1082,9 +1082,9 @@ textarea:focus {
   margin-bottom: 30px; }
   @media only screen and (max-width: 767px) {
     .receipe-headline h2 {
-      font-size: 60px; } }
+      font-size: 40px; } }
 .receipe-headline .receipe-duration {
-  border-left: 3px solid #006b77;
+  border-left: 3px solid #7E5B34;
   padding: 15px; }
   .receipe-headline .receipe-duration h6 {
     font-size: 15px;
@@ -1175,7 +1175,7 @@ textarea:focus {
       .footer-area .footer-social-info a:last-child {
         margin-right: 0; }
       .footer-area .footer-social-info a:hover, .footer-area .footer-social-info a:focus {
-        color: #40ba37; }
+        color: #9C926D; }
   .footer-area p {
     color: #4b4b4b;
     font-weight: 600;
@@ -1188,7 +1188,7 @@ textarea:focus {
       color: #4b4b4b;
       font-weight: 600; }
       .footer-area p a:hover, .footer-area p a:focus {
-        color: #40ba37; }
+        color: #9C926D; }
   @media only screen and (max-width: 767px) {
     .footer-area .footer-logo {
       max-width: 90px; } }
@@ -1327,9 +1327,9 @@ textarea:focus {
   z-index: 1; }
   .single-contact-information h6 {
     font-size: 14px;
-    border-bottom: 2px solid #40ba37;
+    border-bottom: 2px solid #9C926D;
     display: inline-block;
-    color: #40ba37; }
+    color: #9C926D; }
 
 .contact-form-area .form-control {
   height: 52px;
@@ -1345,7 +1345,7 @@ textarea:focus {
   -webkit-transition-duration: 500ms;
   transition-duration: 500ms; }
   .contact-form-area .form-control:focus {
-    border-left: 3px solid #40ba37;
+    border-left: 3px solid #9C926D;
     box-shadow: none; }
 .contact-form-area textarea.form-control {
   height: 200px;
@@ -1373,7 +1373,7 @@ textarea:focus {
   .single-cool-fact h3 {
     font-size: 48px;
     margin-bottom: 10px;
-    color: #40ba37;
+    color: #9C926D;
     font-weight: 700; }
   .single-cool-fact h6 {
     font-size: 18px;
@@ -1393,9 +1393,9 @@ textarea:focus {
   text-transform: uppercase; }
   .single-accordion h6 a {
     border-radius: 0;
-    background-color: #40ba37;
+    background-color: #9C926D;
     color: #ffffff;
-    border-left: 3px solid #1c8314;
+    border-left: 3px solid #9C926D;
     display: block;
     margin: 0;
     padding: 20px 60px 20px 20px;
@@ -1416,7 +1416,7 @@ textarea:focus {
     .single-accordion h6 a.collapsed {
       background-color: #f3f5f8;
       color: #9b9b9b;
-      border-left: 3px solid #40ba37; }
+      border-left: 3px solid #9C926D; }
       .single-accordion h6 a.collapsed span.accor-close {
         opacity: 0;
         -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
@@ -1443,7 +1443,7 @@ textarea:focus {
       background-color: #f3f5f8;
       color: #9b9b9b;
       border: none;
-      border-left: 3px solid #40ba37;
+      border-left: 3px solid #9C926D;
       padding: 0 15px;
       height: 50px;
       line-height: 50px;
@@ -1459,9 +1459,9 @@ textarea:focus {
         .delicious-tabs-content .nav-tabs .nav-link {
           padding: 0 10px; } }
       .delicious-tabs-content .nav-tabs .nav-link.active {
-        background-color: #40ba37;
+        background-color: #9C926D;
         color: #ffffff;
-        border-left: 3px solid #1c8314; }
+        border-left: 3px solid #9C926D; }
   .delicious-tabs-content .tab-content h6 {
     font-size: 18px; }
 
@@ -1699,7 +1699,7 @@ html {
   }
 
   h4.step-number {
-    color:#3F2E1F
+    color:#7E5B34
   }
 
   #preloader {
