--- a/ancestral-cookbook/style.css
+++ b/ancestral-cookbook/style.css
@@ -1711,7 +1711,7 @@ html {
   } */
 
   .classy-navbar, .delicious-main-menu, .classy-menu {
-    background-color: #1D150E !important;
+    background-color: #412021 !important;
     color:#3F2E1F;
   }
 
