--- a/ancestral-cookbook/style.css
+++ b/ancestral-cookbook/style.css
@@ -38,7 +38,7 @@
 
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: 'EB Garamond', serif;
   font-size: 14px; 
   background-color: #E4D2AC;
 }
@@ -1491,21 +1491,23 @@ label.comments {
 }
 
 .meal-item {
-  background-color: var(--meal-bg);
+  background-color: #D7BD86;
   color: var(--meal-text);
   border-radius: 0px;
   border-width:0px;
   padding: 16px;
   margin: 12px 0;
   cursor: pointer;
-  transition: background-color 0.3s, transform 0.2s;
   max-width: 300px;
   display: inline-block;
+  transition: transform 500ms, background-color 500ms !important;
+  transform: scale(1);
 }
 
 .meal-item:hover {
-  background-color: var(--meal-bg-hover);
-  transform: scale(1.02);
+  background-color: #CAA860;
+  transform: scale(1.1);
+  transition: transform 500ms, background-color 500ms !important;
 }
 
 .meal-header {
