--- a/ancestral-cookbook/style.css
+++ b/ancestral-cookbook/style.css
@@ -1493,21 +1493,23 @@ label.comments {
 .meal-item {
   background-color: #D7BD86;
   color: var(--meal-text);
-  border-radius: 0px;
+  border-radius: 12px;
   border-width:0px;
-  min-height: 200px;
-  padding: 16px;
+  height: 310px;
+  padding: 0px;
   margin: 12px 0;
   cursor: pointer;
   max-width: 300px;
   display: inline-block;
   transition: transform 500ms, background-color 500ms !important;
   transform: scale(1);
+  z-index: 1;
 }
 
 .meal-item:hover {
   background-color: #CAA860;
-  transform: scale(1.1);
+  transform: scale(1.2);
+  z-index: 2;
   transition: transform 500ms, background-color 500ms !important;
 }
 
@@ -1698,6 +1700,11 @@ h4.step-number {
     color: #E4D2AC;
     line-height: 1.3;
     font-weight: 600;
+  }
+
+  .meal-item {
+      --meal-bg: #2a3a4a;
+      color: #f0f0f0;
   }
 
   h2.recipetitle {
